--- a/silzila-frontend/src/Components/ChartFieldFilter/UserFilterCard.css
+++ b/silzila-frontend/src/Components/ChartFieldFilter/UserFilterCard.css
@@ -1,9 +1,11 @@
 .UserFilterCard{
     display: block; 
-    width: auto;
+    /* width: auto; */
+    width:100%;
     max-height: 15em;
-    border: 1px solid lightblue;
-    padding: 5px;
+    /* min-height: 1000rem; */
+    /* border: 1px solid lightblue; */
+    /* padding: 5px; */
 }
 
 .UserSelectionDiv{
@@ -11,7 +13,7 @@
     position: relative;
     max-height: 12em;
     background-color:#eee;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     font-size: 12px;
 }
 
@@ -57,7 +59,8 @@
 }
 
 .UserFilterCheckboxes{
-    width: 100%;
+    display: flex;
+    width: 95%;
     float: left;
     text-align: left;
 }
@@ -67,9 +70,11 @@
 }
 
 .UserFilterCheckboxes span{
-    padding: 0 5px;
+    /* padding: 0 5px; */
+padding:0 5px 0 0;
     color: black;
 }
+
 
 .ErrorText{
     float: left;
